2009-05-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Check hierarchy cycles and duplicate order at the same hierarchy level..

2009-05-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Avoid startup dependency on web modules..

2009-05-15  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/web.py:
	Added support for actions in static rights definitions and OWNER role checking. .

2009-05-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/web.py:
	Re-enable access of web server to CMS modules after previous access rights restriction..

2009-05-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Update existing action descriptions when reloading module actions..

2009-05-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Use a default action description when do description is found..

2009-05-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Added basic settings of access rights for the users of CMS..

2009-05-12  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Simplify rights management using a hotkey action to toggle permission..

2009-05-12  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Added support for automatic detection of available module actions and their descriptions..

2009-05-12  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Sort actions by action id, rather than by name..

2009-05-12  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/web.py:
	Infer 'subpath' rights from 'view' rights..

2009-05-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Automatically display module description/title..

2009-05-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/__init__.py:
	* lib/pytis/extensions/cms/cms.py: